gccida/c2/dw2_asm_output_encoded_addr_rtx
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dw2_asm_output_encoded_addr_rtx/src/dwarf2asm.c:1334:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dw2_asm_output_encoded_addr_rtx/src/dwarf2asm.c:1344:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v11.rtwint = ( __int64)v13->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dw2_asm_output_encoded_addr_rtx/src/dwarf2asm.c:1376:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v11.rtwint = ( __int64)v4->fld[0]; 
                       ^~~~~~~~~~
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dw2_asm_output_encoded_addr_rtx/src/obj/dwarf2asm.o] Error 1
